--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "express-validator": "^5.3.0",
     "mongoose": "^5.2.17"
   },
   "devDependencies": {},
